# python-filemanager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
python-filemanager/: cli.py  modules.py
